logs/kupu.mashups.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kupu'...
Listing './lib/python3.5/site-packages/kupu/mashups'...
Listing './lib/python3.5/site-packages/kupu/mashups/browser'...
Compiling './lib/python3.5/site-packages/kupu/mashups/browser/BeautifulSoup.py'...
***   File "./lib/python3.5/site-packages/kupu/mashups/browser/BeautifulSoup.py", line 427
    raise AttributeError, "'%s' object has no attribute '%s'" % (self.__class__.__name__, attr)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kupu/mashups/browser/templates'...
Listing './lib/python3.5/site-packages/kupu/mashups/profiles'...
Listing './lib/python3.5/site-packages/kupu/mashups/profiles/default'...
Listing './lib/python3.5/site-packages/kupu/mashups/skins'...
Listing './lib/python3.5/site-packages/kupu/mashups/skins/kupumashups'...
Listing './lib/python3.5/site-packages/kupu/mashups/skins/kupumashups_images'...
Listing './lib/python3.5/site-packages/kupu/mashups/skins/kupumashups_styles'...
Listing './lib/python3.5/site-packages/kupu/mashups/tests'...
Listing './lib/python3.5/site-packages/kupu.mashups-0.2dev_r81592.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
